--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 :root {
-    --main: #5242EA;
-    --main-hover: #3c2eb6;
-    --main-less-opacity: #5342ea6b;
+    --main: #0C8948;
+    --main-hover: #086434;
+    --main-less-opacity: #0c894857;
 
   }
 * {
